[package]
authors = ["David Wallace Croft <david@CroftSoft.com>"]
categories = ["games", "simulation"]
description = "Evolve the movement of critters through food distribution"
edition = "2021"
homepage = "https://www.CroftSoft.com/"
keywords = ["evolution", "simulation"]
license = "MIT"
name = "com-crofsoft-app-evolve"
publish = false
readme = "README.md"
repository = "https://github.com/david-wallace-croft/com-croftsoft-app-evolve"
version = "0.11.1-SNAPSHOT"

[dependencies]
anyhow = "1.0.71"
# com-croftsoft-lib-animation = { path = "../../../crates/com-croftsoft-lib-animation" }
# com-croftsoft-lib-animation = { git = "https://github.com/david-wallace-croft/com-croftsoft-lib-animation" }
com-croftsoft-lib-animation = "0.0.5"
com-croftsoft-lib-role = "0.2.0"
console_error_panic_hook = "0.1.7"
futures = "0.3.28"
js-sys = "0.3.63"
rand = "0.8.5"
wasm-bindgen = "0.2.86"
wasm-bindgen-futures = "0.4.36"
wee_alloc = { version = "0.4.5", optional = true }

[dependencies.getrandom]
features = [
  "js",
]
version = "0.2.9"

[dependencies.web-sys]
features = [
  "CanvasRenderingContext2d",
  "Document",
  "DomRect",
  "Element",
  "Event",
  "HtmlCanvasElement",
  "HtmlCollection",
  "HtmlDivElement",
  "HtmlInputElement",
  "MouseEvent",
  "Performance",
  "Window",
  "console",
]
version = "0.3.63"

[dev-dependencies]
wasm-bindgen-test = "0.3.36"

[features]
default = ["wee_alloc"]

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
