[package]
authors = ["David Wallace Croft <david@CroftSoft.com>"]
categories = ["games", "simulation"]
description = "Evolve the movement of critters through food distribution"
edition = "2021"
homepage = "https://www.CroftSoft.com/"
keywords = ["evolution", "simulation"]
license = "MIT"
name = "com-crofsoft-app-evolve"
publish = false
readme = "README.md"
repository = "https://github.com/david-wallace-croft/com-croftsoft-app-evolve"
version = "0.11.2-SNAPSHOT"

[dependencies]
anyhow = "1.0.80"
com-croftsoft-lib-animation = "0.0.8"
com-croftsoft-lib-role = "0.5.1"
console_error_panic_hook = "0.1.7"
futures = "0.3.30"
js-sys = "0.3.68"
rand = "0.8.5"
wasm-bindgen = "0.2.91"
wasm-bindgen-futures = "0.4.41"

[dependencies.getrandom]
features = ["js"]
version = "0.2.12"

[dependencies.web-sys]
features = [
  "CanvasRenderingContext2d",
  "Document",
  "DomRect",
  "Element",
  "Event",
  "HtmlCanvasElement",
  "HtmlCollection",
  "HtmlDivElement",
  "HtmlInputElement",
  "MouseEvent",
  "Performance",
  "Window",
  "console",
]
version = "0.3.68"

[dev-dependencies]
wasm-bindgen-test = "0.3.41"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
